<resources>
    <string name="app_name">Counter</string>
    <string name="start_new_count">Start New Count</string>
    <string name="view_books">View Books</string>
    <string name="create_report">Create Report</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_sound_on_click">Toggle Sound Off/On</string>
    <string name="set_vibration_on_click">Toggle Vibration Off/On</string>
    <string name="increment_by_1_10">INCREMENT BY:</string>
    <string name="count_Total_string">0</string>
    <string name="title_newCount_toolbar">New Count</string>
    <string name="title_graphReport_Dialog">Report Graph</string>
    <string name="title_saveCount_toolbar">Save Count</string>
    <string name="title_settings_toolbar">Settings</string>
    <string name="joke_of_the_day">Joke of the Day:</string>
    <string name="delete_book">Delete Book</string>
    <string name="choose_existing_book">Choose Existing Book:</string>
    <string name="total">Total:</string>
    <string name="must_have_count_name">* Must Have Count Name *</string>
    <string name="count_name">Count Name</string>
    <string name="select_date">Select Date:</string>
    <string name="date">Date</string>
    <string name="or_create_new_book">Or Create New Book</string>
    <string name="select_graph_type">Select Graph Type:</string>
    <string name="select_range">Select Date Range:</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="select_book_name">Select Book Name:</string>
    <string name="generate_graph">Generate Graph</string>
    <string name="select_books_to_graph">Select Books To Graph</string>
    <string name="sort_by">Sort By:</string>
    <string name="title_a_z">Title A-Z</string>
    <string name="title_z_a">Title Z-A</string>
    <string name="date_asc">Date ASC</string>
    <string name="date_dsc">Date DSC</string>
    <string name="total_asc">Total ASC</string>
    <string name="total_dsc">Total DSC</string>
    <string name="add_new_count">Add New Count</string>
    <string name="Excel_Sheet_Title">Counter Pro Chart</string>
    <string name="Email_Subject_Line">Counter Pro Export.xls</string>
    <string name="graph_text_message">\"This Graph was made using Counter Pro on \"</string>


</resources>