<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="Create Report"
        android:id="@+id/mnu_filterBooks"
        android:icon="@drawable/ic_baseline_filter_alt_24"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/sort_BookLabel" android:title="@string/sort_by"/>
            <item android:id="@+id/sortBookTitleAZ" android:title="@string/title_a_z"/>
            <item android:id="@+id/sortBookTitleZA" android:title="@string/title_z_a" />
            <item android:id="@+id/sortBookDateASC" android:title="@string/date_asc" />
            <item android:id="@+id/sortBookDateDSC" android:title="@string/date_dsc" />
        </menu>
    </item>

    <item android:title="Create Book"
        android:id="@+id/mnu_createBook"
        android:icon="@drawable/ic_baseline_add_24"
        app:showAsAction="always"/>
</menu>