<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_chooseBook"
    tools:context=".SaveCountDialog">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AppBar_saveCount"
        android:theme="@style/CustomAppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_saveCount"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/CustomAppTheme.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/lbl_error_CountNameRequired"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/must_have_count_name"
            android:textStyle="italic"
            android:textColor="@color/errorRed"
            android:textAlignment="center"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtbx_countTitle"
            android:textSize="22sp"
            android:padding="10dp"
            android:textAlignment="center"
            android:lines="1"
            android:maxLines="1"
            android:maxLength="25"
            android:hint="@string/count_name"/>


    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_selectDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_date"
            android:textSize="22sp"
            android:paddingStart="30dp"
            android:paddingEnd="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            />

        <TextView
            android:id="@+id/txtbx_saveCountDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/date"
            android:textSize="22sp"
            android:padding="20dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:paddingStart="30dp"
        android:paddingEnd="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:text="@string/choose_existing_book"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:background="?attr/backgroundColorForList"
            >

            <Spinner
                android:id="@+id/spinner_selectBookToSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="10dp"
                android:textAlignment="center"
                android:theme="?attr/selectBoxStyle" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingEnd="10dp"
            android:paddingStart="5dp">

            <Button
                android:id="@+id/btn_createNewBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/or_create_new_book"
                android:textSize="14sp" />

        </RelativeLayout>


    </LinearLayout>



</LinearLayout>