<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateReportDialog">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AppBar_createReport"
        android:theme="@style/CustomAppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_createReport"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/CustomAppTheme.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/backgroundColorList"
            >

            <TextView
                android:id="@+id/checkbox_dialogSelectBook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/select_books_to_graph"
                android:padding="10dp"
                android:textSize="22sp"
                android:drawablePadding="16dp"
                android:drawableEnd="@android:drawable/arrow_down_float"
                android:drawableTint="@color/colorAccent"
                android:background="@color/backgroundColorList"
                />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/select_range"
            android:textSize="22sp"
            android:paddingStart="30dp"
            android:paddingEnd="10dp"
            android:paddingTop="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/colorAccent"
                android:text="@string/start"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="10dp"
                android:text="@string/end"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@color/backgroundColorList"
                >

                <Spinner
                    android:backgroundTint="@color/colorAccent"
                    android:id="@+id/spinner_selectStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:layout_marginBottom="20dp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@color/backgroundColorList"
                >

                <Spinner
                    android:backgroundTint="@color/colorAccent"
                    android:id="@+id/spinner_selectEndDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:layout_marginBottom="20dp"
                    />

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Set X-Axis Labels:"
            android:textSize="22sp"
            android:paddingStart="30dp"
            android:paddingEnd="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            />

        <RadioGroup
            android:id="@+id/radioGroup_xAxis"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:paddingStart="30dp"
            android:paddingEnd="10dp"
            >
            <RadioButton
                android:id="@+id/rb_CountDates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="Count Dates"
                android:paddingStart="5dp"/>
            <RadioButton
                android:id="@+id/rb_CountTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="Count Titles"
                android:paddingStart="5dp"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/select_graph_type"
            android:textSize="22sp"
            android:paddingStart="30dp"
            android:paddingEnd="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="@color/backgroundColorList"
            >

            <Spinner
                android:backgroundTint="@color/colorAccent"
                android:id="@+id/spinner_selectGraphType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:textAlignment="center"
                android:padding="10dp"
                />

        </RelativeLayout>


        <Button
            android:id="@+id/btnGenerateGraph"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/generate_graph"
            android:textSize="20sp"
            android:background="@drawable/custom_button"
            android:textColor="@color/backGroundColor"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="60dp"

            />


    </LinearLayout>

</FrameLayout>